# lattice-node

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  init.sh  mesh-api-check.sh  mesh-api-start.sh  mesh-gates.sh  mesh-kill.sh  mesh-start.sh  simulate-lattice.sh
.cargo/: config.toml
.hermes/plans/: 2026-07-12_phase8-agent-harness.md
deploy/: lattice-lumen.service  lattice-relay.service  pi-edge-setup.sh  provision-relay.sh
docs/: bootstrap-confession-spec.md  chain-catchup-design.md  changes-sandbox-vs-production.md  claim-report-format.md  collaborator-analysis-2026-07-17.md  collaborator-full-analysis-2026-07-17.md  derivation-model-spec.md  era-two-design.md  fetch-protocol-design.md  fork-resolution-design-proposal.md  lattice-overview-for-collaborator.md  model-b-design-spec.md  ntp-clock-check-design.md  phase-6-verification.md  taxonomy-v2.md  thickness-vouch-spec.md  zombie-eviction-design.md
docs/architecture/: cell-network.md  epistemic-integrity.md  invariants.md
lattice-storage-relay/: receipt_chain.ledger
lattice-storage-relay/persistence/: state.snapshot  transactions.wal
proto/: impact_certificate.proto
scripts/: setup-linux.sh  setup-mac.sh  setup-windows.ps1
src/: api.rs  claims.rs  commit.rs  ingest.rs  lib.rs  main.rs  node.rs  sortition.rs  startup.rs  swarm_measure.rs
src/agent/: checkpoint.rs  codec.rs  executor.rs  mod.rs  registry.rs  state.rs
src/claims/: acceptance.rs  mod.rs
src/economics/: metrics.rs  mint.rs  mod.rs  receipts.rs  tax.rs
src/ledger/: gossip_sync_handler.md  mod.rs  persistence.rs  state.rs  thickness.rs  types.rs  validation.rs
src/message/: codec.rs  types.rs
src/network/: protocol.rs
src/state/: peers.rs
src/storage/: challenge.rs  merkle.rs  mod.rs  proof.rs
tests/: agent-integration-8b.sh  agent-integration.sh  kill_and_recover.rs
