[package]
name = "lattice-node"
version = "0.1.0"
edition = "2021"
description = "Lattice mesh node — sovereign peer-to-peer application layer"
authors = ["Dale Joseph <dale@emergenceinstitute.live>"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Peer-to-peer networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "identify",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"

# Identity & crypto
ed25519-dalek = "2"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
