[package]
name = "lattice-node"
version = "0.1.0"
edition = "2021"
description = "Lattice mesh node — sovereign peer-to-peer application layer"
authors = ["Dale Joseph <dale@emergenceinstitute.live>"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Peer-to-peer networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "gossipsub",
    "request-response",
    "kad",
    "identify",
    "macros",
    "relay",
    "dcutr",
    "dns",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"

# Identity & crypto
ed25519-dalek = "2"
rand = "0.8"

# Async trait support (libp2p request_response::Codec is async)
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing (Phase 6: storage verification)
blake3 = "1"
hex = "0.4"

# Protobuf (Phase 7: TCP wire format — shared contract with Python sandbox)
prost = "0.13"
sha2 = "0.10"
serde_json = "1"
base64 = "0.22"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
